# chessEngine

./: .gitignore  CMakeLists.txt  README.md  bitboards.cpp  bitboards.h  board.cpp  board.h  chessEngine.cbp  debug.cpp  defs.h  evaluate.cpp  evaluate.h  helpers.cpp  init.cpp  main.cpp  movegen.cpp  movegen.h  perfit.cpp  perfit.h  polybook.cpp  polybook.h  search.cpp  search.h  search_logs.txt  test.cpp  tt.cpp  tt.h  uci.cpp  uci.h  zobrist.cpp  zobrist.h
includes/: board.h  helpers.h  perfit.h  search.h  tt.h  uci.h  zobrist.h
src/: bitboards.cpp  init.cpp  main.cpp  movegen.cpp  perfit.cpp  polybook.cpp  search.cpp  uci.cpp  zobrist.cpp
